2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valacodebinding.vala,
	  vala/valacodecontext.vala, vala/valacodegenerator.vala,
	  vala/valacodenode.vala, gobject/Makefile.am,
	  gobject/valaccodegenerator.vala, compiler/valacompiler.vala: rename
	  CodeGenerator to CCodeGenerator, add abstract CodeGenerator and
	  CodeBinding classes

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/valacodevisitor.vala, vala/valalambdaexpression.vala,
	  vala/valamemorymanager.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolresolver.vala, gobject/valacodegenerator.vala: switch
	  lambda expression to external visitor

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/valacodevisitor.vala, vala/valamemorymanager.vala,
	  vala/valaobjectcreationexpression.vala,
	  vala/valasemanticanalyzer.vala, vala/valasymbolresolver.vala,
	  gobject/valacodegenerator.vala: switch object creation expression to
	  external visitor

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/valacodevisitor.vala, vala/valainvocationexpression.vala,
	  vala/valamemorymanager.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolresolver.vala,
	  gobject/valacodegeneratorinvocationexpression.vala: switch invocation
	  expression to external visitor

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/valacodevisitor.vala, vala/valamemorymanager.vala,
	  vala/valareturnstatement.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolresolver.vala, gobject/valacodegenerator.vala: switch
	  return statement to external visitor

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/valablock.vala, vala/valacodevisitor.vala,
	  vala/valaforeachstatement.vala, vala/valamemorymanager.vala,
	  vala/valasemanticanalyzer.vala, vala/valaswitchsection.vala,
	  vala/valasymbolresolver.vala, gobject/valacodegenerator.vala: switch
	  block to external visitor

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaassignment.vala, vala/valacodevisitor.vala,